# audio-visualizer

./: .gitignore  .travis.yml  Analyzable.cpp  CMakeLists.txt  Makefile  README.md  analyzable.cpp  analyzable.hpp  audio-vis.cpp  audio-vis.h  conanREADME.md  conanfile.txt  temp.txt  test.sh
src/: Analyzable.cpp  Analyzable.hpp  Analyzer.cpp  Analyzer.h  CMakeLists.txt  Config.cpp  Config.h  DataQueue.h  Engine.cpp  Engine.h  Extrema.cpp  Extrema.h  Main.cpp  Visualizer.cpp  Visualizer.h  config.xml  main.cpp  utils.cpp  utils.h
test/: build.sh  install.sh  test.sh
